2003-07-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/svg/svg-length.c (sp_svg_length_set): New method

	* src/sp-spiral.c (sp_spiral_write): Write path here

	* src/sp-image.c (sp_image_repr_read_image): Treat NULL docbase as current directory

	* src/sp-gradient.c (sp_gradient_write): Merged code with flatten_attribute
	(sp_lineargradient_write): Ditto
	(sp_radialgradient_write): Ditto

	* src/rect-context.c (sp_rect_context_root_handler): Get motion hints

	* src/helper/sp-canvas.c (SP_CANVAS_UPDATE_PRIORITY): Use higher priority

	* src/document.c (SP_DOCUMENT_UPDATE_PRIORITY): Use higher priority

2003-06-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_glyph_outline_get): Do not
	load outlines multiple times, fixes serious memleak

2003-06-28  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog): Added line spacing combo
	(sp_text_edit_dialog_update_object): Update line spacing
	(sp_text_edit_dialog_read_selection): Update control

	* src/sp-text.c (sp_text_set): Parse "sodipodi:linespacing"
	(sp_text_set_shape): Use line spacing

	* src/attributes.c: Added "sodipodi:linespacing"

2003-06-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c (sp_dtw_border_layer_toggled): New callback
	(sp_desktop_dialog_new): Added border layer
	(sp_dtw_update): Track border layer

	* src/spsvgview.c: Implement slideshow

	* src/sp-namedview.c (sp_namedview_set): Track borderlayer

	* src/desktop.c (sp_desktop_new): Add page border directly to
	main group
	(sp_dt_namedview_modified): Track border layer

	* src/attributes.c: Added "borderlayer"

2003-06-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-pattern.c (sp_pattern_update): Implemented, patterns show up again
	(sp_pattern_painter_new): Painter is not GObject anymore, fixes crash
	(sp_pattern_painter_free): Ditto

	* src/sp-root.c: Removed namedview tracking
