@@ -1,3 +1,9 @@
+2003-07-06  Masatake YAMATO  <jet@gyve.org>
+
+	* src/verbs.c (sp_verb_action_edit_perform): Added case
+	SP_VERB_EDIT_CLEAR_ALL.
+	(SP_VERB_IS_EDIT): Extended to SP_VERB_EDIT_SELECT_ALL.
+
 2003-07-04  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/svg/svg-length.c (sp_svg_length_set): New method
